Site Selector: fix width on mobile viewports.
Allow it to grow to 100% on small screens, and move
selector to sidebar for the main picker.

--- a/assets/stylesheets/layout/_sidebar.scss
+++ b/assets/stylesheets/layout/_sidebar.scss
@@ -302,4 +302,10 @@
 	.search {
 		border-bottom: 1px solid lighten( $gray, 20% );
 	}
+
+	@include breakpoint( "<660px" ) {
+		width: 100vw;
+		left: -100vw;
+		-webkit-overflow-scrolling: touch;
+	}
 }
